test/src/e2e_vm_tests/test_programs/should_fail/associated_type_missing_impl/src/main.sw
script;

trait TypeTrait {
    type T;
}

struct Struct {}

impl TypeTrait for Struct {
}

fn main() -> u32 {
  0
}
